external-crates/move/crates/move-compiler/tests/move_2024/parsing/address_weird_formatting.move
address 
// Some comments
0x2 
// This is terribly formatted. Who would do this??
{
    module m {
    }}
